--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
 <link rel="stylesheet" href="./_assets/style.48c9e4ca.css">
-<link rel="stylesheet" href="./test.css">
+<link rel="stylesheet" href="./_assets/test.css">
 </head>
 <body>
   <div id="app"></div>
