--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resume</title>
-<link rel="stylesheet" href="./assets/style.48c9e4ca.css">
+<link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
   <div id="app"></div>
